--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,28 +1,45 @@
 /* Custom styles file */
 /* Файл для наших собственных стилей */
 
-/* Navigation */
-/* Стили навигационного меню */
-
-.navbar {
-	border-radius: 0px;
-	border-bottom-color: white;
-	background-color: black;
-}
-
 /* General styles */
 /* Общие стили */
 
 body {
-	background-color: black;
-	color: white;
+	background-color: #2F2F2F;
+	color: #FAFAFA;
 	font-size: 20px;
+}
+
+body, html {
+    height: 100%;
+    margin: 0;
+    overflow:hidden;
+    font-family: helvetica;
+    font-weight: 100;
 }
 
 h1, h2, h3, h4, h5, h6 {
 	text-align: center;
 	margin-bottom: 20px;
+	color: #68920E;
 	/*font-size: 1.7em;*/ /*Tim*/
+}
+
+a {
+	color: #68920E;
+	text-decoration: none;	
+}
+
+a:hover {
+	color: #FAFAFA;
+}
+
+a, a:hover {
+	-webkit-transition: all.6s ease;
+	-moz-transition: all.6s ease;
+	-o-transition: all.6s ease;
+	-ms-transition: all.6s ease;
+	transition: all.6s ease;
 }
 
 /* Tim */
@@ -41,4 +58,107 @@ img {
 
 p {
 	font-size: 1.2em;
+}
+
+/* Sidebar styles */
+.nav-container {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    padding-left: 0px;
+    padding-right: 0px;
+    -webkit-transition:  left 0.4s ease-in-out;
+    -moz-transition:  left 0.4s ease-in-out;
+    -ms-transition:  left 0.4s ease-in-out;
+    -o-transition:  left 0.4s ease-in-out;
+    transition:  left 0.4s ease-in-out;
+}
+.nav-container.open-sidebar {
+    left: 240px;
+}
+.swipe-area {
+    position: absolute;
+    width: 50px;
+    left: 0;
+	top: 0;
+    height: 100%;
+    background: #2A2A2A;
+    z-index: 0;
+}
+#sidebar {
+    background: #2F2F2F;
+    position: absolute;
+    width: 240px;
+    height: 100%;
+    left: -240px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+}
+#sidebar ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+#sidebar ul li {
+    margin: 0;
+}
+#sidebar ul li a {
+    padding: 15px 20px;
+    font-size: 16px;
+    font-weight: 100;
+    color: #FAFAFA;
+    text-decoration: none;
+    display: block;
+    border-bottom: 1px solid #68920E;
+    -webkit-transition:  background 0.3s ease-in-out;
+    -moz-transition:  background 0.3s ease-in-out;
+    -ms-transition:  background 0.3s ease-in-out;
+    -o-transition:  background 0.3s ease-in-out;
+    transition:  background 0.3s ease-in-out;
+}
+#sidebar ul li:hover a {
+    background: #68920E;
+}
+.main-content {
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    position: relative;
+}
+.main-content .content{
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+padding-left: 60px;
+width: 100%;
+}
+.main-content .content h1{
+    font-weight: 100;
+}
+.main-content .content p{
+    width: 100%;
+    line-height: 160%;
+}
+.main-content #sidebar-toggle {
+    background: #68920E;
+    border-radius: 0px;
+    border: 3px;
+    border-color: #FAFAFA;
+    display: block;
+    position: relative;
+    padding: 10px 7px;
+    float: left;
+}
+.main-content #sidebar-toggle .bar{
+     display: block;
+    width: 18px;
+    margin-bottom: 3px;
+    height: 2px;
+    background-color: #FAFAFA;
+    border-radius: 1px;
+}
+.main-content #sidebar-toggle .bar:last-child{
+     margin-bottom: 0;
 }
